--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
-# Here's where I'd ignore some files... IF I HAD ANY env
+# Here's where I'd ignore some files... IF I HAD ANY 
+   
+# Ignore Python Virtual Environment
+    /env
